@@ -56,6 +56,7 @@
 - Added course prerequisites (course access depends on another course's completion) 
 - Allow variable text-box sizes in "empty spaces" questions
 - Added select box option in empty spaces questions
+- Added option for showing correct answers only if student passed the test
 - Changed course certificate expiration calculations to be more accurate (#1225)
 
 === Version 3.6.8 build 9931 ===
